@@ -4119,6 +4119,31 @@ command to generate the output files.
     <glob pattern="*.fo"/>
     <glob pattern="*.xslfo"/>
   </mime-type>
+  <mime-type type="text/x-iptables">
+    <_comment>iptables configuration file</_comment>
+    <sub-class-of type="text/plain"/>
+    <magic priority="50">
+      <match type="string" value="/etc/sysconfig/iptables" offset="0:256"/>
+      <match type="string" value="*filter" offset="0:256">
+        <match type="string" value=":INPUT" offset="0:256">
+          <match type="string" value=":FORWARD" offset="0:256">
+            <match type="string" value=":OUTPUT" offset="0:256"/>
+          </match>
+        </match>
+      </match>
+      <match type="string" value="-A INPUT" offset="0:256">
+        <match type="string" value="-A FORWARD" offset="0:256">
+          <match type="string" value="-A OUTPUT" offset="0:256"/>
+        </match>
+      </match>
+      <match type="string" value="-P INPUT" offset="0:256">
+        <match type="string" value="-P FORWARD" offset="0:256">
+          <match type="string" value="-P OUTPUT" offset="0:256"/>
+        </match>
+      </match>
+    </magic>
+  <glob pattern="*.iptables"/>
+  </mime-type>
   <mime-type type="application/xslt+xml">
     <sub-class-of type="application/xml"/>
     <_comment>XSLT stylesheet</_comment>
